# Claude-Code-LangGrpahSimpleVerison

./: .gitignore  README.md
prompts/: README.md
py_agent/: demo.py  pyproject.toml
py_agent/src/: __init__.py
py_agent/src/agent/: __init__.py  graph.py  state.py
py_agent/src/agent/nodes/: __init__.py  reasoning.py  tools.py
py_agent/src/agent/prompts/: __init__.py  system.py
py_agent/src/sandbox/: __init__.py  config.py
py_agent/src/tools/: __init__.py  client.py  registry.py
py_agent/tests/: test_agent.py
ts_tool_server/: package-lock.json  package.json
ts_tool_server/src/: index.ts
ts_tool_server/src/sandbox/: executor.ts
ts_tool_server/src/tools/: executor.ts  ripgrep.ts  server.ts  types.ts
